--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </nav>
     </header>
 
-    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 items-center">
+    <section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8 items-center ">
         <!-- Left Image Section -->
         <div>
-          <img src="./images/Image Placeholder.png" alt="./images/placeholder" class="w-full">
+          <img src="./images/Image Placeholder.png" alt="./images/placeholder" class="w-full transition-opacity  opacity-80 hover:opacity-100">
         </div>
     
         <!-- Right Form Section -->
@@ -78,9 +78,9 @@
               NFT marketplace UI created with Aatma for Figma. Join our community.
             </p>
             <div class="flex gap-4 mt-4">
-              <img src="./images/Twitter.png" alt="Twitter" class="h-6 w-6">
-              <img src="./images/Facebook.png" alt="Facebook" class="h-6 w-6">
-              <img src="./images/YouTube.png" alt="YouTube" class="h-6 w-6">
+              <img src="./images/icon-footer-1.png" alt="Twitter" >
+              <img src="./images/icon-footer-2.png" alt="Facebook">
+              <img src="./images/icon-footer-3.png" alt="YouTube">
             </div>
           </div>
     
